force-app/main/default/objects/Bid__c/fields/Apps__c.field-meta.xml
<CustomField>
    <fullName>Apps__c</fullName>
    <formula>IF(INCLUDES( Opportunity__r.Business_Unit__c , &quot;APPS&quot;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apps</label>
    <type>Checkbox</type>
</CustomField>