force-app/main/default/objects/Bid__c/fields/BC__c.field-meta.xml
<CustomField>
    <fullName>BC__c</fullName>
    <formula>IF(INCLUDES( Opportunity__r.Business_Unit__c , &quot;Advisory&quot;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisory</label>
    <type>Checkbox</type>
</CustomField>