force-app/main/default/objects/Bid__c/fields/Is_Bid_changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Bid_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by  Processbuilder (to TRUE) or MS Flow (to FALSE) to prevent unneccessary updates in sharepoint</description>
    <label>Is Bid changed</label>
    <type>Checkbox</type>
</CustomField>