force-app/main/default/objects/Bid__c/fields/Manual_flow__c.field-meta.xml
<CustomField>
    <fullName>Manual_flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used only to trigger a flow manually / for mass updates</description>
    <label>Manual flow</label>
    <type>Checkbox</type>
</CustomField>